fixed the help label for dynamic and dynamic+ that didnt work on mobile, added a modal for help for the question

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,39 +3,39 @@
 @tailwind utilities;
 
 main {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  color-scheme: dark light;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  @apply leading-3 font-normal text-center md:p-10 w-screen flex justify-center
+    color-scheme: dark light;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    @apply leading-3 font-normal text-center md:p-10 w-screen flex justify-center;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
 }
 
 html {
-  @apply max-sm:scroll-p-12 scroll-p-20
+    @apply max-sm:scroll-p-12 scroll-p-20;
 }
 
 body {
-  @apply m-0 flex place-items-center min-w-min min-h-screen
+    @apply m-0 flex place-items-center min-w-min min-h-screen;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -52,4 +52,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
